# otus-cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  build.yaml  release.yaml
dependencies/: dependencies.cmake  gtest.cmake
resources/: version.h.in
src/: CMakeLists.txt
src/greetingapp/: CMakeLists.txt  main.cpp  precompiled.h
src/greetinglib/: CMakeLists.txt  otus_exports.h  otus_greeting.h  precompiled.h
src/ip_filter/: CMakeLists.txt  ipf_exports.h  ipf_ip.cpp  ipf_ip.h  main.cpp  precompiled.h
src/ip_lib/: CMakeLists.txt  ipf_ip.cpp  ipf_ip.h  precompiled.h
src/otusapp/: CMakeLists.txt  main.cpp  otusapp_precompiled.h
src/otuslib/: CMakeLists.txt  otus_greeting.cpp
tests/: CMakeLists.txt
tests/greetinglib_tests/: CMakeLists.txt  otus_greeting_tests.cpp  precompiled.h
tests/ip_filter_tests/: CMakeLists.txt
tests/ip_lib_tests/: CMakeLists.txt  ipf_ip_tests.cpp  precompiled.h
tests/otuslib_tests/: CMakeLists.txt  main.cpp
